// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components - features - LN-10-global - cardCarrusel - default should match snapshot 1`] = `
<div>
  <div>
    <article
      class="flex relative overflow-hidden border-1 border-neutral-200 border-all aspect-9/16 mocked-class"
    >
      <div
        class="flex justify-center items-center relative overflow-hidden h-full w-full -z-1"
      >
        <div
          data-testid="video-mock"
        >
          <span>
            video.mp4
          </span>
          <span>
            poster.jpg
          </span>
          <span>
            Paused
          </span>
        </div>
      </div>
      <div
        class="flex flex-col w-full gap-16 absolute bottom-0 breark-word items-center px-16 pb-32 w-full"
      >
        <span
          class="bg-black rounded-16 uppercase z-1 text-[12px] px-8 py-6 text-white w-max"
        >
          Test Badge
        </span>
        <div
          class="flex flex-col items-center gap-16"
        >
          <h2
            class="prumo prumo-semibold text-light-0 text-center text-24"
          >
             
            Test Title
          </h2>
          <div
            class="flex items-center gap-8 text-14 leading-0 text-neutral-100 pl-8"
          >
            <div
              class="h-20 w-20 flex items-center justify-center"
            >
              <mock-ds-common-icon
                name="play-filled"
                size="20"
              />
            </div>
            <time
              class="pr-8"
            >
              02:00
            </time>
          </div>
        </div>
      </div>
    </article>
  </div>
</div>
`;

exports[`components - features - LN-10-global - cardCarrusel - default should match snapshot without title 1`] = `
<div>
  <div>
    <article
      class="flex relative overflow-hidden border-1 border-neutral-200 border-all aspect-9/16 mocked-class"
    >
      <div
        class="flex justify-center items-center relative overflow-hidden h-full w-full -z-1"
      >
        <div
          data-testid="video-mock"
        >
          <span>
            video.mp4
          </span>
          <span>
            poster.jpg
          </span>
          <span>
            Paused
          </span>
        </div>
      </div>
      <div
        class="flex flex-col w-full gap-16 absolute bottom-0 breark-word items-center px-16 pb-32 w-full"
      >
        <span
          class="bg-black rounded-16 uppercase z-1 text-[12px] px-8 py-6 text-white w-max"
        >
          Test Badge
        </span>
        <div
          class="flex flex-col items-center gap-16"
        >
          <div
            class="flex items-center gap-8 text-14 leading-0 text-neutral-100 pl-8"
          >
            <div
              class="h-20 w-20 flex items-center justify-center"
            >
              <mock-ds-common-icon
                name="play-filled"
                size="20"
              />
            </div>
            <time
              class="pr-8"
            >
              02:00
            </time>
          </div>
        </div>
      </div>
    </article>
  </div>
</div>
`;
